# aurora

./: .gaussian_aliases  .gitignore  .gitmodules  README.md  docker-compose.jetson.yml  docker-compose.x86.yml  setup.bash  setup.sh
docker/: Dockerfile.jetson  Dockerfile.x86  colcon_build.sh  entrypoint.sh
setup/: build_workspace.sh  install_dependencies.sh  setup_environment.sh
src/aurora_bringup/: README.md  package.xml  setup.cfg  setup.py
src/aurora_bringup/config/fast_lio/: avia_mid70.yaml
src/aurora_bringup/config/livox/: mid70.json
src/aurora_bringup/launch/: bringup.launch.py
src/aurora_bringup/resource/: aurora_bringup
src/aurora_bringup/rviz/: aurora_fastlio.rviz
