<?xml version="1.0"?>
<package format="3">
  <name>aurora_bringup</name>
  <version>0.1.0</version>
  <description>Unified bringup for AURORA - DevDrone (MAVROS + Livox + ZED + FAST-LIO2 + TF + RViz)</description>
  <maintainer email="daniel.h.1896@googlemail.com">Daniel Henning</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>livox_ros2_driver</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
